kubernetes/prod-cluster/observability/kiali/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: observability
spec:
  hosts:
  - "kiali.dagobah.internal"
  gateways:
  - observability-gateway
  http:
  - name: "kiali-routes"
    route:
    - destination:
        host: kiali.observability.svc.cluster.local
        port:
          number: 20001
---
